first version with cats & scalaz