@@ -43,12 +43,57 @@ lazy val core =
       },
       libraryDependencies <+= (scalaVersion)("org.scala-lang" % "scala-reflect" % _),
       libraryDependencies ++= Seq(
+          "com.chuusai"     %% "shapeless"        % "2.2.4"
+        , "org.scalatest"   %  "scalatest_2.11"   % "2.2.1"   % "test"
+      ),
+      javaOptions in (Test,run) += "-XX:+UseConcMarkSweepGC -XX:+UseParallelGC -XX:-UseGCOverheadLimit -Xmx8G"
+    )
+
+lazy val coreScalaz =
+  project.in(file("precepte-core-scalaz"))
+    .settings(commonSettings:_*)
+    .settings(strictScalac)
+    .settings(
+      name := "precepte-core-scalaz",
+      publishTo := {
+        val s3Repo = "s3://mfg-mvn-repo"
+        if (isSnapshot.value)
+          Some("snapshots" at s3Repo + "/snapshots")
+        else
+          Some("releases" at s3Repo + "/releases")
+      },
+      libraryDependencies <+= (scalaVersion)("org.scala-lang" % "scala-reflect" % _),
+      libraryDependencies ++= Seq(
           "org.scalaz"      %% "scalaz-core"      % "7.1.0"
         , "com.chuusai"     %% "shapeless"        % "2.2.4"
         , "org.scalatest"   %  "scalatest_2.11"   % "2.2.1"   % "test"
       ),
       javaOptions in (Test,run) += "-XX:+UseConcMarkSweepGC -XX:+UseParallelGC -XX:-UseGCOverheadLimit -Xmx8G"
     )
+    .dependsOn(core)
+
+lazy val coreCats =
+  project.in(file("precepte-core-cats"))
+    .settings(commonSettings:_*)
+    .settings(strictScalac)
+    .settings(
+      name := "precepte-core-cats",
+      publishTo := {
+        val s3Repo = "s3://mfg-mvn-repo"
+        if (isSnapshot.value)
+          Some("snapshots" at s3Repo + "/snapshots")
+        else
+          Some("releases" at s3Repo + "/releases")
+      },
+      libraryDependencies <+= (scalaVersion)("org.scala-lang" % "scala-reflect" % _),
+      libraryDependencies ++= Seq(
+          "org.spire-math"  %% "cats"             % "0.2.0"
+        , "com.chuusai"     %% "shapeless"        % "2.2.4"
+        , "org.scalatest"   %  "scalatest_2.11"   % "2.2.1"   % "test"
+      )
+    )
+    .dependsOn(core)
+
 
 lazy val sample =
   project.in(file("precepte-sample"))
@@ -137,7 +182,8 @@ lazy val stream =
       name := "precepte-stream")
     .dependsOn(core)
 
+
 lazy val root = project.in(file("."))
   .settings(commonSettings:_*)
   .settings(name := "precepte-root")
-  .aggregate(core, play, influx, logback, sample, stream)
+  .aggregate(core, coreScalaz, coreCats, play, influx, logback, sample, stream)
